# charon

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  SECURITY.md  TEMPLATES.md  TOUCHES.md  compose.dev.yml  compose.podman.yml  compose.setup.yml  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  package-lock.json  package.json  prisma.config.ts  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml
agent/: Cargo.toml  README.md
agent/src-tauri/: Cargo.toml  tauri.conf.json
agent/src-tauri/src/: client.rs  config.rs  main.rs  posture.rs
agent/ui/: app.js  index.html
agent/ui/css/: charon.css  styles.css
deploy/: HA.md  install-rhel.sh  setup-ha.sh
deploy/nginx/: Dockerfile.pqc  charon.conf.template
deploy/scripts/: charon-nginx-apply.sh
deploy/systemd/: charon-endpoint@.service  charon-enforcer@.service  charon-migrate.service  charon-web.service  charon-worker@.service  charon.target
prisma/: schema.prisma  seed.ts
public/: endpoints.html  events.html  groups.html  index.html  integrations.html  login.html  server-settings.html  setup.html  tags.html
public/css/: charon.css
public/js/: api.js  app.js  dashboard.js  endpoints.js  events.js  groups.js  integrations.js  login.js  server-settings.js  setup.js  table-sf.js  tags.js  theme-init.js
scripts/: check-docs.mjs  copy-build-assets.mjs
src/: app.ts  db.ts  index.ts  jobs.ts  metrics.ts
src/api/: router.ts
src/cli/: seed.ts
src/jobs/: enforcementSyncJob.ts  integrationHealthCheck.ts  retentionPrune.ts  tagReconcileJob.ts
src/services/: activeDirectoryService.ts  agentDistService.ts  agentEnrollmentService.ts  agentTokenService.ts  apiTokenService.ts  authService.ts  backupService.ts  (+24 more)
tests/: setup.ts
(+36 files in other folders)
